--- a/index.xhtml
+++ b/index.xhtml
@@ -19,8 +19,8 @@
 		<a href="" class="q">ABOUT</a>
 		<a href="" class="q">CONTACT</a>
 		<a href="" class="q">LOCATION</a>
-		<a href="Aiswaryaskumar97.github.io/login.php" class="q">LOGIN</a>
-		<a href="Aiswaryaskumar97.github.io/register.php" class="q">LOGOUT</a>
+		<a href="aiswaryaskumar97.github.io/login.php" class="q">LOGIN</a>
+		<a href="aiswaryaskumar97.github.io/register.php" class="q">LOGOUT</a>
 		
 		
                 
