--- a/index.xhtml
+++ b/index.xhtml
@@ -20,7 +20,7 @@
 		<a href="" class="q">CONTACT</a>
 		<a href="" class="q">LOCATION</a>
 		<a href="login.php" class="q">LOGIN</a>
-		<a href="register.php" class="q">LOGOUT</a>
+		<a href="register.php" class="q">REGISTER</a>
 		
 		
                 
