--- a/index.xhtml
+++ b/index.xhtml
@@ -19,8 +19,8 @@
 		<a href="" class="q">ABOUT</a>
 		<a href="" class="q">CONTACT</a>
 		<a href="" class="q">LOCATION</a>
-		<a href="http://localhost:8080/registration/login.php" class="q">LOGIN</a>
-		<a href="http://localhost:8080/registration/register.php" class="q">REGISTER</a>
+		<a href="http://Aiswaryaskumar97.github.io/login.php" class="q">LOGIN</a>
+		<a href="http://Aiswaryaskumar97.github.io/register.php" class="q">REGISTER</a>
 		
 		
                 
